--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,27 +1,64 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: white;
+  height: max-content;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-footer {
+  background-color: lightgray;
+  min-height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+}
+
+.App-content {
+  background-color: royalblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin-top: 10px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border: 3px solid silver;
+  font-size: calc(10px + 1vmin);
+  color: white;
+}
+
+.App-footer > p {
+  margin-top: 3px;
+  margin-bottom: 1px;
+}
+
+.App-footer > h3 {
+  margin-top: 2px;
+  margin-bottom: 1px;
+}
+
+.Title2 {
+  color: darkgray;
+}
+
+.Title3 {
+  color: red;
+  font-size: calc(10px + 3vmin);
 }
 
 .App-link {
