--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,7 +48,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: auto;
+  width: 80%;
   margin-top: 10px;
   margin-bottom: 10px;
   border: 3px solid silver;
