--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,9 +22,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   width: 100%;
-  bottom: 0px;
+  bottom: 0;
+}
+
+.App-footer-box {
+  min-height: 5vh;
+  width: 100%;
 }
 
 .App-content {
