--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,20 +28,17 @@
 }
 
 .App-footer-box {
-  min-height: 5vh;
+  min-height: 20vh;
   width: 100%;
 }
 
 .App-content {
   background-color: royalblue;
-  display: flex;
-  flex-direction: column;
+  display: flexbox;
   align-items: center;
   justify-content: center;
-  width: 80%;
   margin-top: 10px;
-  margin-left: 10%;
-  margin-right: 10%;
+  padding: 2% 5%;
   border: 3px solid silver;
   font-size: calc(10px + 1vmin);
   color: black;
@@ -53,7 +50,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  width: 90%;
   margin-top: 10px;
   margin-bottom: 10px;
   border: 3px solid silver;
