--- a/frontend/src/styles/TasksList.module.css
+++ b/frontend/src/styles/TasksList.module.css
@@ -1,10 +1,8 @@
 .table {  
   background-color: lightblue;
-  display: flex;
-  flex-direction: column;
+  display: flexbox;
   align-items: center;
   justify-content: center;
-  width: 80%;
   margin-top: 10px;
   margin-bottom: 10px;
   border: 3px solid silver;
