--- a/frontend/src/styles/Group.module.css
+++ b/frontend/src/styles/Group.module.css
@@ -1,7 +1,6 @@
 .Group {
     background-color: rgb(220, 243, 252);
     border: 3px solid silver;
-    width: 90%;
 }
 
 .NotUser {
@@ -32,6 +31,7 @@
 }
 
 .Description {
+    background-color: white;
     text-align: left;
     border: 1px solid black;
     padding: 3px;
